Refactoring: Created LessonInstance Entity.